Don't leak MimeData object

Summary:
A DeclarativeDropArea creates a new DeclarativeDragDropEvent on every
enter/move/leave event.

The getter method for the mimeData property creates a new MimeData
QObject wrapper, which then leaks.

Use of the mimeData object outside of the event shouldn't be expected to
work, and a quick grep couldn't find any usage.

BUG: 380270

Test Plan: Dragged some things

Reviewers: #plasma, mart, hein

Reviewed By: #plasma, mart, hein

Subscribers: hein, plasma-devel, #frameworks

Tags: #plasma, #frameworks

Differential Revision: https://phabricator.kde.org/D6017